workloads/waste-tracking-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: APP_NAME
  namespace: APP_NAME
  labels:
    app: APP_NAME
spec:
  selector:
    matchLabels:
      app: APP_NAME
  template:
    metadata:
      labels:
        app: APP_NAME
    spec:
      containers:
        - name: APP_NAME
          image: IMAGE_NAME
          resources:
            limits:
              memory: '128Mi'
              cpu: '50m'
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME
  namespace: APP_NAME
  labels:
    app: APP_NAME
spec:
  selector:
    app: APP_NAME
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: APP_NAME
  namespace: APP_NAME
  labels:
    app: APP_NAME
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: APP_NAME
            port:
              number: 80
